--- a/online-shop/src/pages/Dashboard/components/Wares/style.css
+++ b/online-shop/src/pages/Dashboard/components/Wares/style.css
@@ -71,3 +71,8 @@ button.add:hover {
   flex-direction: column;
   align-items: center;
 }
+.rdw-emoji-modal,
+.rdw-image-modal {
+  right: 5px !important;
+  left: unset !important;
+}
