--- a/online-shop/src/pages/Finalize/style.css
+++ b/online-shop/src/pages/Finalize/style.css
@@ -8,3 +8,50 @@ div.rdp__buttons {
   display: flex;
   justify-content: space-evenly;
 }
+div.tether-element {
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+}
+textarea {
+  height: 70px !important;
+  overflow-y: scroll !important;
+  overflow-x: hidden !important;
+  width: 300px !important;
+  resize: none !important;
+  outline: none;
+}
+div.tether-target {
+  display: flex !important;
+  justify-content: center !important;
+}
+div.address-field {
+  display: flex !important;
+  justify-content: center !important;
+}
+div.finalize-field {
+  margin: 10px 0;
+}
+.date-field {
+  display: block !important;
+  margin: auto !important;
+}
+.pay-btn-container {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+.pay-btn {
+  text-decoration: none !important;
+  font-weight: bold !important;
+  color: white !important;
+  background-color: green !important;
+  padding: 10px 40px !important;
+  border-radius: 7px !important;
+  margin-top: 20px !important;
+  border: none;
+}
+.pay-btn:hover {
+  background-color: rgb(89, 255, 47) !important;
+}
