complete result , payment page

--- a/online-shop/src/pages/Dashboard/components/Wares/style.css
+++ b/online-shop/src/pages/Dashboard/components/Wares/style.css
@@ -76,3 +76,8 @@ button.add:hover {
   right: 5px !important;
   left: unset !important;
 }
+.cancel-icon {
+  padding: 0 !important;
+  justify-content: flex-end !important;
+  width: 14% !important;
+}
