--- a/online-shop/src/pages/Dashboard/components/Orderes/style.css
+++ b/online-shop/src/pages/Dashboard/components/Orderes/style.css
@@ -32,11 +32,11 @@ button.warning:hover {
   margin-bottom: 5px;
 }
 .delivered-alert {
-  background-color: #26c32b;
-  padding: 8px;
-  border-radius: 5px;
-  color: white;
-  font-weight: bold;
+  background-color: #26c32b !important;
+  padding: 8px !important;
+  border-radius: 5px !important;
+  color: white !important;
+  font-weight: bold !important;
 }
 .delivery-time {
   font-weight: bold;
