handle changing number of products in store

--- a/online-shop/src/pages/List/style.css
+++ b/online-shop/src/pages/List/style.css
@@ -79,7 +79,7 @@ aside {
 }
 .side-bar > aside,
 .main-section {
-  flex: 1 !important;
+  /* flex: 1 !important; */
   overflow: auto !important;
 }
 .MuiAccordionDetails-root {
