--- a/online-shop/src/pages/Dashboard/components/Stock/style.css
+++ b/online-shop/src/pages/Dashboard/components/Stock/style.css
@@ -1,9 +1,12 @@
-button.save {
-  background-color: #4caf50;
-  color: white;
-  margin-bottom: 14px;
-  font-weight: bold;
-  margin-left: 16px;
+.save {
+  background-color: #4caf50 !important;
+  color: white !important;
+  margin-bottom: 14px !important;
+  font-weight: bold !important;
+  margin-left: 16px !important;
+}
+.save:hover {
+  background-color: #22a526 !important ;
 }
 .save-product {
   direction: ltr;
