--- a/online-shop/src/asset/css/font.css
+++ b/online-shop/src/asset/css/font.css
@@ -1,60 +1,83 @@
 @font-face {
   font-family: Vazir;
-  src: url("Vazir-Regular.eot");
-  src: url("Vazir-Regular.eot?#iefix") format("embedded-opentype"),
-    url("Vazir-Regular.woff2") format("woff2"),
-    url("Vazir-Regular.woff") format("woff"),
-    url("Vazir-Regular.ttf") format("truetype");
+  src: url("../font/vazir/Vazir-Regular.eot");
+  src: url("../font/vazir/Vazir-Regular.eot?#iefix") format("embedded-opentype"),
+    url("../font/vazir/Vazir-Regular.woff2") format("woff2"),
+    url("../font/vazir/Vazir-Regular.woff") format("woff"),
+    url("../font/vazir/Vazir-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: Vazir;
-  src: url("Vazir-Bold.eot");
-  src: url("Vazir-Bold.eot?#iefix") format("embedded-opentype"),
-    url("Vazir-Bold.woff2") format("woff2"),
-    url("Vazir-Bold.woff") format("woff"),
-    url("Vazir-Bold.ttf") format("truetype");
+  src: url("../font/vazir/Vazir-Bold.eot");
+  src: url("../font/vazir/Vazir-Bold.eot?#iefix") format("embedded-opentype"),
+    url("../font/vazir/Vazir-Bold.woff2") format("woff2"),
+    url("../font/vazir/Vazir-Bold.woff") format("woff"),
+    url("../font/vazir/Vazir-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 @font-face {
   font-family: Vazir;
-  src: url("Vazir-Black.eot");
-  src: url("Vazir-Black.eot?#iefix") format("embedded-opentype"),
-    url("Vazir-Black.woff2") format("woff2"),
-    url("Vazir-Black.woff") format("woff"),
-    url("Vazir-Black.ttf") format("truetype");
+  src: url("../font/vazir/Vazir-Black.eot");
+  src: url("../font/vazir/Vazir-Black.eot?#iefix") format("embedded-opentype"),
+    url("../font/vazir/Vazir-Black.woff2") format("woff2"),
+    url("../font/vazir/Vazir-Black.woff") format("woff"),
+    url("../font/vazir/Vazir-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
 @font-face {
   font-family: Vazir;
-  src: url("Vazir-Medium.eot");
-  src: url("Vazir-Medium.eot?#iefix") format("embedded-opentype"),
-    url("Vazir-Medium.woff2") format("woff2"),
-    url("Vazir-Medium.woff") format("woff"),
-    url("Vazir-Medium.ttf") format("truetype");
+  src: url("../font/vazir/Vazir-Medium.eot");
+  src: url("../font/vazir/Vazir-Medium.eot?#iefix") format("embedded-opentype"),
+    url("../font/vazir/Vazir-Medium.woff2") format("woff2"),
+    url("../font/vazir/Vazir-Medium.woff") format("woff"),
+    url("../font/vazir/Vazir-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: Vazir;
-  src: url("Vazir-Light.eot");
-  src: url("Vazir-Light.eot?#iefix") format("embedded-opentype"),
-    url("Vazir-Light.woff2") format("woff2"),
-    url("Vazir-Light.woff") format("woff"),
-    url("Vazir-Light.ttf") format("truetype");
+  src: url("../font/vazir/Vazir-Light.eot");
+  src: url("../font/vazir/Vazir-Light.eot?#iefix") format("embedded-opentype"),
+    url("../font/vazir/Vazir-Light.woff2") format("woff2"),
+    url("../font/vazir/Vazir-Light.woff") format("woff"),
+    url("../font/vazir/Vazir-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: Vazir;
-  src: url("Vazir-Thin.eot");
-  src: url("Vazir-Thin.eot?#iefix") format("embedded-opentype"),
-    url("Vazir-Thin.woff2") format("woff2"),
-    url("Vazir-Thin.woff") format("woff"),
-    url("Vazir-Thin.ttf") format("truetype");
+  src: url("../font/vazir/Vazir-Thin.eot");
+  src: url("../font/vazir/Vazir-Thin.eot?#iefix") format("embedded-opentype"),
+    url("../font/vazir/Vazir-Thin.woff2") format("woff2"),
+    url("../font/vazir/Vazir-Thin.woff") format("woff"),
+    url("../font/vazir/Vazir-Thin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
+}
+@font-face {
+  font-family: iranyekan;
+  font-style: normal;
+  font-weight: normal;
+  font-display: swap;
+  src: url("../font/iranyekan/iranyekanwebregular.woff");
+  src: url("../font/iranyekan/iranyekanwebregular.woff") format("woff");
+}
+@font-face {
+  font-family: iranyekan;
+  font-style: normal;
+  font-weight: bold;
+  font-display: swap;
+  src: url("../font/iranyekan/iranyekanwebbold.woff") format("woff");
+}
+@font-face {
+  font-family: "irsans-bold";
+  src: url("../font/iransans/iransansweb_bold.ttf") format("truetype");
+}
+@font-face {
+  font-family: "irsans";
+  src: url("../font//iransans/iransansweb.ttf") format("truetype");
 }
