--- a/online-shop/src/pages/Cart/style.css
+++ b/online-shop/src/pages/Cart/style.css
@@ -32,3 +32,7 @@ a.cart-finalize-link {
 a.cart-finalize-link:hover {
   background-color: rgb(89, 255, 47);
 }
+.cart-title-container {
+  width: 90%;
+  margin: auto;
+}
