--- a/online-shop/src/pages/Dashboard/components/Wares/style.css
+++ b/online-shop/src/pages/Dashboard/components/Wares/style.css
@@ -6,6 +6,9 @@
   display: flex;
   flex-direction: row-reverse;
 }
+.MuiIconButton-colorInherit {
+  transform: scale(-1);
+}
 .MuiTablePagination-spacer::after {
   content: "تعداد سطر در هر صفحه";
   font-weight: bold;
