--- a/online-shop/src/pages/NotFound/style.module.css
+++ b/online-shop/src/pages/NotFound/style.module.css
@@ -15,9 +15,7 @@
   width: 90%;
 }
 .content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
 }
 .link {
   text-decoration: none;
