--- a/online-shop/src/pages/Finalize/style.css
+++ b/online-shop/src/pages/Finalize/style.css
@@ -51,6 +51,7 @@ div.finalize-field {
   margin-top: 20px !important;
   border: none;
   cursor: pointer !important;
+  transition: 0.4s ease-out;
 }
 .pay-btn:hover {
   background-color: rgb(89, 255, 47) !important;
