a little logic , ui

--- a/online-shop/src/layout/components/PublicHeader/style.module.css
+++ b/online-shop/src/layout/components/PublicHeader/style.module.css
@@ -7,3 +7,9 @@
 .dashboardLink:hover {
   color: rgba(255, 255, 0, 0.739);
 }
+.hideHeader {
+  display: none;
+}
+.showHeader {
+  display: block;
+}
